# cgo-cryptopro

./: .gitignore  Makefile  cgo-cryptopro.go  cgo-cryptopro_test.go  go.mod
casm/: calls.go  calls_amd64.s  runtime.go
clib/: CMakeLists.txt
clib/include/: cryptopro.h
clib/src/: cryptopro.c
clib/tests/: CMakeLists.txt  tests.cpp
